# VoiceTyper

./: .gitattributes  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.opencode/: instructions.md
.opencode/features/: wake-word.md
UI/: audio_devices.py  settings_store.py
examples/: demo_cli.py  demo_consts.py  demo_download.py  demo_push_to_talk.py  demo_push_to_talk_ui.py  demo_wake_word.py
scripts/: build.bat  setup_build_env.bat
src/: demo_speech_recognition.py
src/voicetyper/: __init__.py  app_config.py  audio.py  autostart.py  device_watch.py  devices.py  downloads.py  hotkey.py  kws.py  models.py  monitor.py  recognition.py  recorder.py  settings.py
tests/: test_import.py
