[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetyper"
version = "0.1.0"
description = "可复用的离线语音输入库，基于 SenseVoiceSmall (sherpa-onnx)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.4.3",
    "psutil>=5.9.0",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pillow>=10.4.0",
    "pypinyin>=0.53.0",
    "pystray>=0.19.5",
    "sherpa-onnx==1.10.45",
    "speechrecognition>=3.14.6",
]

[tool.setuptools.packages.find]
where = ["src"]
